GUI/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> declare expression
Rule 2     expression -> inCase expression
Rule 3     expression -> repeat expression
Rule 4     expression -> since expression
Rule 5     expression -> dot expression
Rule 6     expression -> initialize expression
Rule 7     expression -> fill expression
Rule 8     expression -> increase expression
Rule 9     expression -> decrease expression
Rule 10    expression -> diagonal_right expression
Rule 11    expression -> diagonal_left expression
Rule 12    expression -> procedure expression
Rule 13    expression -> call expression
Rule 14    expression -> empty
Rule 15    declare -> DECLARE ID SEMICOLON
Rule 16    declare -> DECLARE ID DEFAULT NUMBER SEMICOLON
Rule 17    inCase -> INCASE when1 ifnot ENDINCASE SEMICOLON
Rule 18    inCase -> INCASE ID when2 ifnot ENDINCASE SEMICOLON
Rule 19    when1 -> WHEN ID CONDITION sentence THEN LBRACKET expression RBRACKET when1
Rule 20    when1 -> empty
Rule 21    when2 -> WHEN CONDITION sentence THEN LBRACKET expression RBRACKET when2
Rule 22    when2 -> empty
Rule 23    ifnot -> IFNOT LBRACKET expression RBRACKET
Rule 24    sentence -> ID
Rule 25    sentence -> NUMBER
Rule 26    repeat -> REPEAT expression until_find SEMICOLON
Rule 27    until_find -> TOFIND sentence CONDITION sentence
Rule 28    since -> FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
Rule 29    dot -> DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
Rule 30    increase -> INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
Rule 31    decrease -> DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
Rule 32    initialize -> INITIALIZE LPAREN ID RPAREN SEMICOLON
Rule 33    fill -> FILL LPAREN sentence RPAREN SEMICOLON
Rule 34    diagonal_left -> DIAGL LPAREN sentence RPAREN SEMICOLON
Rule 35    diagonal_right -> DIAGR LPAREN sentence RPAREN SEMICOLON
Rule 36    empty -> <empty>
Rule 37    localDeclare -> DECLARE ID SEMICOLON
Rule 38    localDeclare -> DECLARE ID DEFAULT NUMBER SEMICOLON
Rule 39    localExpression -> inCase localExpression
Rule 40    localExpression -> repeat localExpression
Rule 41    localExpression -> since localExpression
Rule 42    localExpression -> dot localExpression
Rule 43    localExpression -> initialize localExpression
Rule 44    localExpression -> fill localExpression
Rule 45    localExpression -> increase localExpression
Rule 46    localExpression -> decrease localExpression
Rule 47    localExpression -> diagonal_right localExpression
Rule 48    localExpression -> diagonal_left localExpression
Rule 49    localExpression -> procedure localExpression
Rule 50    localExpression -> empty
Rule 51    params -> oneParam
Rule 52    params -> moreParam
Rule 53    params -> empty
Rule 54    oneParam -> ID params
Rule 55    moreParam -> COMMA ID params
Rule 56    procedure -> PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
Rule 57    params_call -> oneParam_call
Rule 58    params_call -> moreParam_call
Rule 59    params_call -> empty
Rule 60    oneParam_call -> ID params_call
Rule 61    oneParam_call -> NUMBER params_call
Rule 62    moreParam_call -> COMMA ID params_call
Rule 63    moreParam_call -> COMMA NUMBER params_call
Rule 64    call -> CALL ID LPAREN params_call RPAREN SEMICOLON

Terminals, with rules where they appear

CALL                 : 64
COLON                : 56
COLOR                : 29
COMMA                : 29 29 30 31 55 62 63
CONDITION            : 19 21 27 28
DECLARE              : 15 16 37 38
DECREASE             : 31
DEFAULT              : 16 38
DIAGL                : 34
DIAGR                : 35
DO                   : 28
DOT                  : 29
END                  : 56
ENDFROM              : 28
ENDINCASE            : 17 18
FILL                 : 33
FROM                 : 28
ID                   : 15 16 18 19 24 30 31 32 37 38 54 55 56 60 62 64
IFNOT                : 23
INCASE               : 17 18
INCREASE             : 30
INITIALIZE           : 32
LBRACKET             : 19 21 23
LPAREN               : 29 30 31 32 33 34 35 56 64
NUMBER               : 16 25 38 61 63
PROCEDURE            : 56
RBRACKET             : 19 21 23
REPEAT               : 26
RPAREN               : 29 30 31 32 33 34 35 56 64
SEMICOLON            : 15 16 17 18 26 28 29 30 31 32 33 34 35 37 38 56 64
START                : 56
THEN                 : 19 21
TOFIND               : 27
UNTIL                : 28
WHEN                 : 19 21
error                : 

Nonterminals, with rules where they appear

call                 : 13
declare              : 1 28
decrease             : 9 46
diagonal_left        : 11 48
diagonal_right       : 10 47
dot                  : 5 42
empty                : 14 20 22 50 53 59
expression           : 1 2 3 4 5 6 7 8 9 10 11 12 13 19 21 23 26 28 0
fill                 : 7 44
ifnot                : 17 18
inCase               : 2 39
increase             : 8 45
initialize           : 6 43
localDeclare         : 56
localExpression      : 39 40 41 42 43 44 45 46 47 48 49 56
moreParam            : 52
moreParam_call       : 58
oneParam             : 51
oneParam_call        : 57
params               : 54 55 56
params_call          : 60 61 62 63 64
procedure            : 12 49
repeat               : 3 40
sentence             : 19 21 27 27 28 29 29 30 31 33 34 35
since                : 4 41
until_find           : 26
when1                : 17 19
when2                : 18 21

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (26) repeat -> . REPEAT expression until_find SEMICOLON
    (28) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (29) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (32) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (33) fill -> . FILL LPAREN sentence RPAREN SEMICOLON
    (30) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (31) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (35) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (34) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (56) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (64) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (36) empty -> .

    DECLARE         shift and go to state 17
    INCASE          shift and go to state 18
    REPEAT          shift and go to state 6
    FROM            shift and go to state 28
    DOT             shift and go to state 21
    INITIALIZE      shift and go to state 20
    FILL            shift and go to state 2
    INCREASE        shift and go to state 9
    DECREASE        shift and go to state 11
    DIAGR           shift and go to state 12
    DIAGL           shift and go to state 3
    PROCEDURE       shift and go to state 27
    CALL            shift and go to state 13
    $end            reduce using rule 36 (empty -> .)

    diagonal_left                  shift and go to state 14
    diagonal_right                 shift and go to state 1
    initialize                     shift and go to state 15
    empty                          shift and go to state 4
    procedure                      shift and go to state 16
    decrease                       shift and go to state 5
    fill                           shift and go to state 19
    dot                            shift and go to state 7
    call                           shift and go to state 10
    since                          shift and go to state 22
    increase                       shift and go to state 8
    declare                        shift and go to state 23
    repeat                         shift and go to state 24
    inCase                         shift and go to state 25
    expression                     shift and go to state 26

state 1

    (10) expression -> diagonal_right . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (26) repeat -> . REPEAT expression until_find SEMICOLON
    (28) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (29) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (32) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (33) fill -> . FILL LPAREN sentence RPAREN SEMICOLON
    (30) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (31) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (35) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (34) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (56) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (64) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (36) empty -> .

    DECLARE         shift and go to state 17
    INCASE          shift and go to state 18
    REPEAT          shift and go to state 6
    FROM            shift and go to state 28
    DOT             shift and go to state 21
    INITIALIZE      shift and go to state 20
    FILL            shift and go to state 2
    INCREASE        shift and go to state 9
    DECREASE        shift and go to state 11
    DIAGR           shift and go to state 12
    DIAGL           shift and go to state 3
    PROCEDURE       shift and go to state 27
    CALL            shift and go to state 13
    $end            reduce using rule 36 (empty -> .)
    TOFIND          reduce using rule 36 (empty -> .)
    RBRACKET        reduce using rule 36 (empty -> .)
    ENDFROM         reduce using rule 36 (empty -> .)

    diagonal_left                  shift and go to state 14
    diagonal_right                 shift and go to state 1
    initialize                     shift and go to state 15
    empty                          shift and go to state 4
    procedure                      shift and go to state 16
    decrease                       shift and go to state 5
    fill                           shift and go to state 19
    dot                            shift and go to state 7
    call                           shift and go to state 10
    since                          shift and go to state 22
    increase                       shift and go to state 8
    declare                        shift and go to state 23
    repeat                         shift and go to state 24
    inCase                         shift and go to state 25
    expression                     shift and go to state 29

state 2

    (33) fill -> FILL . LPAREN sentence RPAREN SEMICOLON

    LPAREN          shift and go to state 30


state 3

    (34) diagonal_left -> DIAGL . LPAREN sentence RPAREN SEMICOLON

    LPAREN          shift and go to state 31


state 4

    (14) expression -> empty .

    RBRACKET        reduce using rule 14 (expression -> empty .)
    $end            reduce using rule 14 (expression -> empty .)
    TOFIND          reduce using rule 14 (expression -> empty .)
    ENDFROM         reduce using rule 14 (expression -> empty .)


state 5

    (9) expression -> decrease . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (26) repeat -> . REPEAT expression until_find SEMICOLON
    (28) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (29) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (32) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (33) fill -> . FILL LPAREN sentence RPAREN SEMICOLON
    (30) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (31) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (35) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (34) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (56) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (64) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (36) empty -> .

    DECLARE         shift and go to state 17
    INCASE          shift and go to state 18
    REPEAT          shift and go to state 6
    FROM            shift and go to state 28
    DOT             shift and go to state 21
    INITIALIZE      shift and go to state 20
    FILL            shift and go to state 2
    INCREASE        shift and go to state 9
    DECREASE        shift and go to state 11
    DIAGR           shift and go to state 12
    DIAGL           shift and go to state 3
    PROCEDURE       shift and go to state 27
    CALL            shift and go to state 13
    $end            reduce using rule 36 (empty -> .)
    TOFIND          reduce using rule 36 (empty -> .)
    RBRACKET        reduce using rule 36 (empty -> .)
    ENDFROM         reduce using rule 36 (empty -> .)

    diagonal_left                  shift and go to state 14
    diagonal_right                 shift and go to state 1
    initialize                     shift and go to state 15
    empty                          shift and go to state 4
    procedure                      shift and go to state 16
    decrease                       shift and go to state 5
    fill                           shift and go to state 19
    dot                            shift and go to state 7
    call                           shift and go to state 10
    since                          shift and go to state 22
    increase                       shift and go to state 8
    declare                        shift and go to state 23
    repeat                         shift and go to state 24
    inCase                         shift and go to state 25
    expression                     shift and go to state 32

state 6

    (26) repeat -> REPEAT . expression until_find SEMICOLON
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (26) repeat -> . REPEAT expression until_find SEMICOLON
    (28) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (29) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (32) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (33) fill -> . FILL LPAREN sentence RPAREN SEMICOLON
    (30) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (31) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (35) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (34) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (56) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (64) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (36) empty -> .

    DECLARE         shift and go to state 17
    INCASE          shift and go to state 18
    REPEAT          shift and go to state 6
    FROM            shift and go to state 28
    DOT             shift and go to state 21
    INITIALIZE      shift and go to state 20
    FILL            shift and go to state 2
    INCREASE        shift and go to state 9
    DECREASE        shift and go to state 11
    DIAGR           shift and go to state 12
    DIAGL           shift and go to state 3
    PROCEDURE       shift and go to state 27
    CALL            shift and go to state 13
    TOFIND          reduce using rule 36 (empty -> .)

    diagonal_left                  shift and go to state 14
    diagonal_right                 shift and go to state 1
    initialize                     shift and go to state 15
    empty                          shift and go to state 4
    procedure                      shift and go to state 16
    decrease                       shift and go to state 5
    fill                           shift and go to state 19
    dot                            shift and go to state 7
    call                           shift and go to state 10
    since                          shift and go to state 22
    increase                       shift and go to state 8
    declare                        shift and go to state 23
    repeat                         shift and go to state 24
    inCase                         shift and go to state 25
    expression                     shift and go to state 33

state 7

    (5) expression -> dot . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (26) repeat -> . REPEAT expression until_find SEMICOLON
    (28) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (29) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (32) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (33) fill -> . FILL LPAREN sentence RPAREN SEMICOLON
    (30) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (31) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (35) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (34) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (56) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (64) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (36) empty -> .

    DECLARE         shift and go to state 17
    INCASE          shift and go to state 18
    REPEAT          shift and go to state 6
    FROM            shift and go to state 28
    DOT             shift and go to state 21
    INITIALIZE      shift and go to state 20
    FILL            shift and go to state 2
    INCREASE        shift and go to state 9
    DECREASE        shift and go to state 11
    DIAGR           shift and go to state 12
    DIAGL           shift and go to state 3
    PROCEDURE       shift and go to state 27
    CALL            shift and go to state 13
    $end            reduce using rule 36 (empty -> .)
    TOFIND          reduce using rule 36 (empty -> .)
    RBRACKET        reduce using rule 36 (empty -> .)
    ENDFROM         reduce using rule 36 (empty -> .)

    diagonal_left                  shift and go to state 14
    diagonal_right                 shift and go to state 1
    initialize                     shift and go to state 15
    empty                          shift and go to state 4
    procedure                      shift and go to state 16
    decrease                       shift and go to state 5
    fill                           shift and go to state 19
    dot                            shift and go to state 7
    call                           shift and go to state 10
    since                          shift and go to state 22
    increase                       shift and go to state 8
    declare                        shift and go to state 23
    repeat                         shift and go to state 24
    inCase                         shift and go to state 25
    expression                     shift and go to state 34

state 8

    (8) expression -> increase . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (26) repeat -> . REPEAT expression until_find SEMICOLON
    (28) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (29) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (32) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (33) fill -> . FILL LPAREN sentence RPAREN SEMICOLON
    (30) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (31) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (35) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (34) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (56) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (64) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (36) empty -> .

    DECLARE         shift and go to state 17
    INCASE          shift and go to state 18
    REPEAT          shift and go to state 6
    FROM            shift and go to state 28
    DOT             shift and go to state 21
    INITIALIZE      shift and go to state 20
    FILL            shift and go to state 2
    INCREASE        shift and go to state 9
    DECREASE        shift and go to state 11
    DIAGR           shift and go to state 12
    DIAGL           shift and go to state 3
    PROCEDURE       shift and go to state 27
    CALL            shift and go to state 13
    $end            reduce using rule 36 (empty -> .)
    TOFIND          reduce using rule 36 (empty -> .)
    RBRACKET        reduce using rule 36 (empty -> .)
    ENDFROM         reduce using rule 36 (empty -> .)

    diagonal_left                  shift and go to state 14
    diagonal_right                 shift and go to state 1
    initialize                     shift and go to state 15
    empty                          shift and go to state 4
    procedure                      shift and go to state 16
    decrease                       shift and go to state 5
    fill                           shift and go to state 19
    dot                            shift and go to state 7
    call                           shift and go to state 10
    since                          shift and go to state 22
    increase                       shift and go to state 8
    declare                        shift and go to state 23
    repeat                         shift and go to state 24
    inCase                         shift and go to state 25
    expression                     shift and go to state 35

state 9

    (30) increase -> INCREASE . LPAREN ID COMMA sentence RPAREN SEMICOLON

    LPAREN          shift and go to state 36


state 10

    (13) expression -> call . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (26) repeat -> . REPEAT expression until_find SEMICOLON
    (28) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (29) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (32) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (33) fill -> . FILL LPAREN sentence RPAREN SEMICOLON
    (30) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (31) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (35) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (34) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (56) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (64) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (36) empty -> .

    DECLARE         shift and go to state 17
    INCASE          shift and go to state 18
    REPEAT          shift and go to state 6
    FROM            shift and go to state 28
    DOT             shift and go to state 21
    INITIALIZE      shift and go to state 20
    FILL            shift and go to state 2
    INCREASE        shift and go to state 9
    DECREASE        shift and go to state 11
    DIAGR           shift and go to state 12
    DIAGL           shift and go to state 3
    PROCEDURE       shift and go to state 27
    CALL            shift and go to state 13
    $end            reduce using rule 36 (empty -> .)
    TOFIND          reduce using rule 36 (empty -> .)
    RBRACKET        reduce using rule 36 (empty -> .)
    ENDFROM         reduce using rule 36 (empty -> .)

    diagonal_left                  shift and go to state 14
    diagonal_right                 shift and go to state 1
    initialize                     shift and go to state 15
    empty                          shift and go to state 4
    procedure                      shift and go to state 16
    decrease                       shift and go to state 5
    fill                           shift and go to state 19
    dot                            shift and go to state 7
    call                           shift and go to state 10
    since                          shift and go to state 22
    increase                       shift and go to state 8
    declare                        shift and go to state 23
    repeat                         shift and go to state 24
    inCase                         shift and go to state 25
    expression                     shift and go to state 37

state 11

    (31) decrease -> DECREASE . LPAREN ID COMMA sentence RPAREN SEMICOLON

    LPAREN          shift and go to state 38


state 12

    (35) diagonal_right -> DIAGR . LPAREN sentence RPAREN SEMICOLON

    LPAREN          shift and go to state 39


state 13

    (64) call -> CALL . ID LPAREN params_call RPAREN SEMICOLON

    ID              shift and go to state 40


state 14

    (11) expression -> diagonal_left . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (26) repeat -> . REPEAT expression until_find SEMICOLON
    (28) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (29) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (32) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (33) fill -> . FILL LPAREN sentence RPAREN SEMICOLON
    (30) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (31) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (35) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (34) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (56) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (64) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (36) empty -> .

    DECLARE         shift and go to state 17
    INCASE          shift and go to state 18
    REPEAT          shift and go to state 6
    FROM            shift and go to state 28
    DOT             shift and go to state 21
    INITIALIZE      shift and go to state 20
    FILL            shift and go to state 2
    INCREASE        shift and go to state 9
    DECREASE        shift and go to state 11
    DIAGR           shift and go to state 12
    DIAGL           shift and go to state 3
    PROCEDURE       shift and go to state 27
    CALL            shift and go to state 13
    $end            reduce using rule 36 (empty -> .)
    TOFIND          reduce using rule 36 (empty -> .)
    RBRACKET        reduce using rule 36 (empty -> .)
    ENDFROM         reduce using rule 36 (empty -> .)

    diagonal_left                  shift and go to state 14
    diagonal_right                 shift and go to state 1
    initialize                     shift and go to state 15
    empty                          shift and go to state 4
    procedure                      shift and go to state 16
    decrease                       shift and go to state 5
    fill                           shift and go to state 19
    dot                            shift and go to state 7
    call                           shift and go to state 10
    since                          shift and go to state 22
    increase                       shift and go to state 8
    declare                        shift and go to state 23
    repeat                         shift and go to state 24
    inCase                         shift and go to state 25
    expression                     shift and go to state 41

state 15

    (6) expression -> initialize . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (26) repeat -> . REPEAT expression until_find SEMICOLON
    (28) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (29) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (32) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (33) fill -> . FILL LPAREN sentence RPAREN SEMICOLON
    (30) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (31) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (35) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (34) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (56) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (64) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (36) empty -> .

    DECLARE         shift and go to state 17
    INCASE          shift and go to state 18
    REPEAT          shift and go to state 6
    FROM            shift and go to state 28
    DOT             shift and go to state 21
    INITIALIZE      shift and go to state 20
    FILL            shift and go to state 2
    INCREASE        shift and go to state 9
    DECREASE        shift and go to state 11
    DIAGR           shift and go to state 12
    DIAGL           shift and go to state 3
    PROCEDURE       shift and go to state 27
    CALL            shift and go to state 13
    $end            reduce using rule 36 (empty -> .)
    TOFIND          reduce using rule 36 (empty -> .)
    RBRACKET        reduce using rule 36 (empty -> .)
    ENDFROM         reduce using rule 36 (empty -> .)
